Resources/clean_c_files_rte/c_files_acsl_by_rte/output_altergo_tests/output_matcher_a_or_b_1_altergo.txt
[kernel] Parsing matcher_a_or_b_1_rte.c (with preprocessing)
[kernel] matcher_a_or_b_1_rte.c:1: 
  syntax error:
  Location: line 1, column 1, before or at token: [
  1     [kernel] Warning: no input file.
        ^
  2     [kernel] Parsing matcher_a_or_b_1.c (with preprocessing)
  3     [rte:annot] annotating function matcher_a_or_b
[kernel] Frama-C aborted: invalid user input.
